--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,3 +12,8 @@ jobs:
         run: |
           node -v
           npm -v
+      - name:
+        run: |
+          import platform
+          print(platform.processor()
+        shell: python
