--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
-          echo "{{ girhub.token}}""
+          echo "{{ github.token }}""
       - name: checkout
         uses: actions/checkout@v1
       - name: List After checkout Files
