--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
           ls -a
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
-          echo "${{ github.token }}""
+          echo $GITHUB_WORKSPACE
       - name: checkout
         uses: actions/checkout@v1
       - name: List After checkout Files
