--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: Actions Workflow
 
 on:
   schedule:
-    - cron: "40-59 * * * *"
+    - cron: "*/2 * * * *"
   pull_request:
     types:
       - "assigned"
