--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,6 +6,7 @@ on:
     - cron: "*/2 * * * *"
   pull_request:
     types: [closed, assigned, opened, reopened]
+  push:
     
 jobs:
   run-github-actions:
