--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -10,9 +10,11 @@ jobs:
   log-env:
     runs-on: ubuntu-latest
     env: 
-      job_ENV: availavle to all steps in log-env job
+      JOB_ENV: available to all steps in log-env job
     steps:
       - name: Log ENV Variables
+        env:
+          STEP_ENV: Available to only this step
         run: |
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
