--- a/.github/workflows/token.yml
+++ b/.github/workflows/token.yml
@@ -15,6 +15,6 @@ jobs:
           --header 'content-type: application/json' \
           --data '{
             "title": "Automated issue for commit: ${{ github.sha }}",
-            "body": "This issue was automatically create by the Github Action workflow **${{ githubworkflow }}**. \n\n
+            "body": "This issue was automatically create by the Github Action workflow **${{ github.workflow }}**. \n\n
             The commit ash was: _${{ github.ha }}_."
             }'
