--- a/.github/workflows/token.yml
+++ b/.github/workflows/token.yml
@@ -1,20 +1,21 @@
-name: Auth_Test
+name: Create issue on commit
 
-on:
-  push:
+on: [ push ]
 
 jobs:
-  Create-auth:
+  create_issue:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write 
     steps:
-      - name: Create issue using rest APII
+      - name: Create issue using REST API
         run: |
-          curl --request POST\
-          --url https://api.github.com/repos/${{ github.repository }}/isues \
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}'\
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'content-type: application/json' \
           --data '{
             "title": "Automated issue for commit: ${{ github.sha }}",
-            "body": "This issue was automatically create by the Github Action workflow **${{ github.workflow }}**. \n\n
-            The commit ash was: _${{ github.ha }}_."
-            }'
+            "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+            }' \
+          --fail
