--- a/.github/workflows/pushRandomFile.yml
+++ b/.github/workflows/pushRandomFile.yml
@@ -3,7 +3,7 @@ name: Push a Random File
 on: [ push ]
 
 jobs:
-  create_issue:
+  Random_File:
     runs-on: ubuntu-latest
     steps:
       - name: Push a random File
@@ -12,8 +12,8 @@ jobs:
           ls -a
           git init 
           git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email "my-bot@bot.com"
-          git config --global user.email "my-bot"
+          git config --global user.email "guilherme0895@gmail.com"
+          git config --global user.email "Gui"
           git fetch
           git checkout master
           git branch --set-upstream-to=origin/master
