--- a/.github/workflows/createIssue.yml
+++ b/.github/workflows/createIssue.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       issues: write 
     steps:
-      - name: Create issue using REST API
+      - name: Create issue using REST APII
         run: |
           curl --request POST \
           --url https://api.github.com/repos/${{ github.repository }}/issues \
