--- a/.github/workflows/createIssue.yml
+++ b/.github/workflows/createIssue.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Assignation
         uses: pozil/auto-assign-issue@v1
         with:
-          repo-token: ${{ GITHUB_TOKEN }}
+          repo-token: ${ GITHUB_TOKEN }
           assignees: ${{ github.actor }}
           numOfAssignee: 1
           allowSelfAssign: true
