--- a/.github/workflows/assign.yml
+++ b/.github/workflows/assign.yml
@@ -1,19 +1,26 @@
 name: Assign issue to contributor
-on: 
+on:
   issues:
     types:
       - opened
+  pull_request:
+    types:
+      - opened
+
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
-  assign:
-    name: Take an issue
+  assign-issue-to-user:
+    name: Assign to user
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
     steps:
-    - name: take the issue
-      uses: bdougie/take-action@main
-      with:
-        message: Thanks for taking this issue! Let us know if you have any questions!
-        trigger: .take
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Assign issue to user
+        uses: pozil/auto-assign-issue@v1
+        with:
+          assignees: ${{ github.actor }}
+          numOfAssignee: 1
+          allowSelfAssign: true
+          abortIfPreviousAssignees: true
