--- a/.github/workflows/functions.yml
+++ b/.github/workflows/functions.yml
@@ -1,7 +1,6 @@
 name: Use functions in expressions
 
-on:
-  push:
+on: [push, pull_request]
     
 jobs:
   functions:
@@ -13,3 +12,10 @@ jobs:
           echo ${{ startsWith( 'hello', 'he') }}
           echo ${{ endsWith ( 'hello', 'lo') }}
           echo ${{ format('Hello {0} {1} {2}', 'World', '!', '!') }}
+  One:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - name: Test_1
+        run: |
+          echo "Everything went okay ${{ github.event_name }}"
