testing Issue Event

--- a/.github/workflows/createIssue.yml
+++ b/.github/workflows/createIssue.yml
@@ -3,7 +3,7 @@ name: Create issue on commit
 on: [ push ]
 
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
 
 jobs:
   create_issue:
