--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,12 +3,17 @@ on: push
 
 jobs:
   node-version:
+    strategy:
+      matrix:
+        node_version: [6,8,10]
+      max-parallel: 2
+      fail-fast: true
     runs-on: ubuntu-latest
     steps:
       - name: Log node version
         run: node -v 
       - uses: actions/setup-node@v1
         with:
-          node-version: 6
+          node-version: ${{ matrix.node_version }}
       - name: log node version
         run: node -v
