--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -5,7 +5,7 @@ jobs:
   node-version:
     strategy:
       matrix:
-        os: [macos-lates, ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         node_version: [6,8,10]
       max-parallel: 3
       fail-fast: true
