--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         node_version: [6,8,10]
-      max-parallel: 3
+    #  max-parallel: 0
       fail-fast: true
     runs-on: ${{ matrix.os }}
     steps:
