--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,9 +7,20 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         node_version: [6,8,10]
+        include :
+          - os: ubuntu-latest
+            node_version: 4
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 6
+          - os: macos-latest
+            node_version: 8
     #  max-parallel: 0
       fail-fast: true
     runs-on: ${{ matrix.os }}
+    env:
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
     steps:
       - name: Log node version
         run: node -v 
@@ -18,3 +29,4 @@ jobs:
           node-version: ${{ matrix.node_version }}
       - name: log node version
         run: node -v
+        echo $IS_UBUNTU_8
