--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -30,4 +30,6 @@ jobs:
       - name: log node version
         run: |
           node -v
+          - if: IS_UBUNTU_8 != "TRUE"
+              echo 'False'
           echo $IS_UBUNTU_8
