--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   node-docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest            #This is how to define and run inside a container
     container: 
       image: node:19-alpine3.16
     steps:
@@ -12,4 +12,3 @@ jobs:
         run: |
           node -v
           cat /etc/os-release
-          
